* Changed tag: <txp:article_custom /> allows new attributes 'wraptag' and 'break'
* Changed tag: <txp:article_custom /> allows comma separated list for 'id' attributes (this doesn't imply a sort order).
* Changed tag: <txp:category /> applies 'class' attribute to the <a> element when wraptag is empty.
* Changed tag: <txp:category_list /> can be used as a container tag
* Changed tag: <txp:file_download_list /> can be used as a container tag
* Changed tag: <txp:if_article_id /> defaults to the current article's id.
* Changed tag: <txp:linklist /> can be used as a container tag
* Changed tag: <txp:recent_comments /> can be used as a container tag
* Changed tag: <txp:recent_comments /> allows new attribute 'offset'
* Changed tag: <txp:search_input /> allows new attribute 'html_id' to set the form's id.
* Changed tag: <txp:section /> applies the 'class' attribute to the <a> element when wraptag is empty.
* Changed tag: <txp:section_list /> can be used as a container tag
* XML-RPC: server now included in main TXP package, disabled by default
* Articles tab: added 'article image' and 'keywords' as search criteria
* Categories tab: categories cannot be accidentally deleted if they are still in use.
* Write tab: Concurrent article edit warning
* Write tab: WYSIWYG preview for draft/pending/hidden articles
* Images tab: added 'alternate text' and 'caption' as search criteria
* Images tab: multi-edit functionality (delete, change category)
* Images tab: setting both thumb width and height to zero or empty values disables auto-thumbnailing
* Links tab: multi-edit functionality (change category)
* Files tab: multi-edit functionality (delete, change category)
* Users tab: multi-edit functionality (delete, reset password, change privilege)
* Users tab: sortable and paginated author list
* Users tab: 'last login' shown in author list
* Plugins tab: User-selectable plugin load order
* Plugins tab: sortable and multi-edit functionality (change order/status, delete)